fix alignment for active toggle on mobile

--- a/src/styles/ManageSnack.module.css
+++ b/src/styles/ManageSnack.module.css
@@ -172,6 +172,10 @@
     width: 100%;
     flex-direction: column;
   }
+
+  .switch__container {
+    align-items: center;
+  }
   
   .frame__column {
     width: 100%;
